# WinQuickUpdater

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  create_vs_project.bat
include/: application.hpp  basic_log.hpp  d3d_impl.hpp  error_handler.hpp  log_helper.hpp  main_ui.hpp  pch.hpp  ui_types.hpp  widget.hpp  win_updater.hpp  window.hpp
src/: application.cpp  d3d_impl.cpp  entry.cpp  log_helper.cpp  main_ui.cpp  ui_types.cpp  widget.cpp  win_updater.cpp  window.cpp
